[27.November 2008]
- DefaultTheme is theme of TestsCampaign
- TestsTheme doesn't have special look of Switch
- Tiles for testing levels remade (from black and white something to 
  blue bricks)
- gfx/teleport.png, gfx/trash.png: new Ingo's graphics
- teleport.rb: now uses Ingo's image
- inventoryview.rb: mess; need for new implementation of trash; deleted
- bottompanel.rb: some functionality moved to new class VikingView;
  InventoryView removed; removed Observer pattern
- bpvikingview.rb: replacement of InventoryView and part of BottomPanel

[25.November 2008]
- shielder.rb: doesn't add Shield to NullLocation
- gamestate.rb, game.rb: Screenshot taking (I had to implement this to be able
  to take screenshots of bomb explosion because I wasn't able to catch it
  with ImageMagick's 'import')

[24.November 2008]
- sophisticatedspritestate.rb: RD->RDoc
- location.rb: Location#find_surface
- viking.rb: New descending mechanism (using Location#find_surface);
  error "1px under viking fixed not considered error any more;
  fixed by making collision rect 1px lower"
- monsters/cottage.rb: made semi-solid (first semi-solid object in the game)
- shielder.rb, shield.rb: Shield changed from Sprite to semi-solid
  StaticObject; works better now (vikings don't fall through it)
- sprinter.rb Sprinter#space_func_on: fixed error "Erik can't jump from shield"
  and caused two new errors
- RubyCampaign/Intro: start moved 10px up

[23.November 2008]
- viking.rb: Viking#collision_rect is smaller than Viking#paint_rect (it's
  70px wide now)
- game.rb, location.rb: one huge blit operation replaced with clipping;
  unfortunatelly it didn't increase frame rate... :(
- game.rb: Game#paint_loading_screen - progressbar doesn't go behind window 
  frame

[16.November 2008]
- sprinter.rb: fixed a piece of dirt from yesterday
- game.rb: fixed method visibility after yesterday's cleanup
- ladder.rb + testing level + graphic: beginning of a new game object 