@@ -3,83 +3,92 @@
 
 module FreeVikings
 
-  # Part of BottomPanel. Place where items which should be deleted
-  # may be given.
-  # Behaves as a "viking" in order to be able to exchange items with vikings.
+  class BottomPanel
 
-  class Trash
+    # Part of BottomPanel. Place where items which should be deleted
+    # may be given.
+    # Behaves as a "viking" in order to be able to exchange items with vikings.
 
-    def initialize
-      @image = Image.load 'trash.png'
-      @portrait = MockPortrait.new @image.image
-      @inventory = TrashInventory.new
-    end
+    class Trash
 
-    attr_reader :portrait
-    attr_reader :inventory
-
-    # removes item from inventory
-
-    def dump
-      @inventory.erase_active
-    end
-
-    # just to behave like a viking
-
-    def alive?
-      true
-    end
-
-    # Methods rect and collides? to behave like a viking and his Rect
-
-    def rect
-      self
-    end
-
-    def collides?(rect)
-      true
-    end
-
-    private
-
-    class MockPortrait < Struct.new(:active, :unactive)
-      def initialize(img)
-        self.active = self.unactive = img
-      end
-    end
-
-    # Pseudo-Inventory which supports just basic set of methods
-
-    class TrashInventory
-      def initialize
-        @slot = nil
+      def initialize(position)
+        @image = Image.load 'trash.png'
+        @rect = Rectangle.new position[0], position[1], @image.w, @image.h
+        @inventory = TrashInventory.new
+        @highlighted = false
       end
 
-      def erase_active
-        o = (@slot or NullItem.instance)
-        @slot = nil
-        return o
+      attr_reader :image
+      attr_reader :inventory
+      attr_reader :rect
+
+      # removes item from inventory
+
+      def dump
+        @inventory.erase_active
       end
 
-      def put(o)
-        @slot = o
+      def alive?
+        true
       end
 
-      def num_slots
-        1
+      def paint(surface)
+        if @highlighted then
+          surface.fill VikingView::HIGHLIGHT_COLOUR, @rect.to_a
+        end
+        surface.blit @image.image, @rect.top_left
+        if @inventory.content then
+          surface.blit @inventory.content.image, @rect.top_left
+        end
       end
 
-      def active_index
-        0
+      def highlight
+        @highlighted = true
       end
 
-      def full?
-        false
+      def unhighlight
+        @highlighted = false
       end
 
-      def [](i)
-        raise ArgumentError if i > 0
-        @slot or NullItem.instance
+      private
+
+      # Pseudo-Inventory which supports just basic set of methods
+
+      class TrashInventory
+        def initialize
+          @slot = nil
+        end
+
+        def erase_active
+          o = (@slot or NullItem.instance)
+          @slot = nil
+          return o
+        end
+
+        def put(o)
+          @slot = o
+        end
+
+        def num_slots
+          1
+        end
+
+        def active_index
+          0
+        end
+
+        def content
+          @slot
+        end
+
+        def full?
+          false
+        end
+
+        def [](i)
+          raise ArgumentError if i > 0
+          @slot or NullItem.instance
+        end
       end
     end
   end
